marketing-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketing-auto-backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      env: prod
    matchExpressions:
      - key: env
        operator: In
        values: 
          - prod
  template:
    metadata:
      name: marketing-auto-pod
      labels:
        env: prod
    spec:
      containers:
      - name: marketing-auto
        image: 650378210006.dkr.ecr.ap-south-1.amazonaws.com/marketing-automation-backend-prod:6924
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
